alignment fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,6 +103,7 @@ header {
 .main-nav {
   float: right;
   margin-top: 4rem;
+  margin-right: 2rem;
 }
 
 .main-nav li {
